--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
-    "name": "highmaps-release",
-    "version": "1.1.5"
+  "name": "highmaps-release",
+  "description": "Official shim repo for Highmaps releases.",
+  "homepage": "http://www.highcharts.com",
+  "version": "v1.1.6",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/highslide-software/highmaps-release"
+  }
 }
