--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,5 @@
 {
   "name": "highmaps",
   "version": "v4.2.7",
-  "main": [
-    "highmaps.js",
-    "modules/exporting.js"
-  ]
+  "main": "highmaps.js"
 }
