--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "highmaps",
   "version": "6.0.2",
-  "main": "highmaps.js"
+  "main": "highmaps.js",
+  "license": "https://www.highcharts.com/license"
 }
